webForm completely from backend, serverUrl removed from source code
